Fixed text alignment for navbar drop-down menu so that it was using the Bootstrap class and not the CSS property.

--- a/module3-solution/css/main.css
+++ b/module3-solution/css/main.css
@@ -14,7 +14,6 @@ html {
     }
 }
 #nav-list a {
-    text-align: center;
     border-top-width: 1px;
     border-bottom-width: 1px;
     border-color: black;
